Change camelCase to hyphen-case. Fix the gridlines on the demo pages.

--- a/HPDemo.html
+++ b/HPDemo.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="css/demo/picchu/picchu.css">
-    <link rel="stylesheet" href="css/mscomGrid.css">
+    <link rel="stylesheet" href="css/mscom-grid.css">
     <link rel="stylesheet" href="css/demo/demo.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -27,8 +27,8 @@
         <a href="Index.html">Main demo page</a>
     </header>
     <section class="gridlines outside">
-        <section class="grid">
-            <div class="row">
+        <section class="ms-grid">
+            <div class="ms-row">
                 <div class="col-1-24">
                     <div class="grid-bar-color"></div>
                 </div>
@@ -104,11 +104,11 @@
             </div>
         </section>
     </section>
-    <section class="grid hero">
+    <section class="ms-grid hero">
         <img src="img/hero.jpg"/>
     </section>
-    <section class="grid">
-        <div class="row">
+    <section class="ms-grid">
+        <div class="ms-row">
             <div class="col-1-3">
                 <img src="img/holder1.jpg" />
                 <span class="caption-text">Chillwave art party plaid keffiyeh bicycle rights, narwhal pour-over put a bird on it quinoa.</span>
@@ -122,7 +122,7 @@
                 <span class="caption-text">Chillwave art party plaid keffiyeh bicycle rights, narwhal pour-over put a bird on it quinoa.</span>
             </div>
         </div>
-        <div class="row">
+        <div class="ms-row">
             <div class="col-1-4">
                 <h2>Discover</h2>
                 <ul class="list-of-links discover-links">
@@ -137,7 +137,7 @@
                 </ul>
             </div>
             <div class="col-3-4">
-                <div class="row">
+                <div class="ms-row">
                     <div class="col-1-3 no-padding-top">
                         <img src="img/holder2.png" />
                         <span class="caption-text">Chillwave art party plaid keffiyeh bicycle rights, narwhal pour-over put a bird on it quinoa.</span>
@@ -151,7 +151,7 @@
                         <span class="caption-text">Portland fap direct trade retro Williamsburg hella. Narwhal 90's blog meh Odd Future selfies.</span>
                     </div>
                 </div>
-                <div class="row">
+                <div class="ms-row">
                     <div class="col-1-3">
                         <h2>Downloads</h2>
                         <ul class="list-of-links">
@@ -184,8 +184,8 @@
         </div>
     </section>
     <section class="social-wrapper">
-        <section class="grid">
-            <div class="row">
+        <section class="ms-grid">
+            <div class="ms-row">
                 <div class="col-1-4">
                     <h2>Follow us</h2>
                     <ul class="list-of-links follow-links">
@@ -202,8 +202,8 @@
         </section>
     </section>
     <footer class="hp-footer">
-        <section class="grid">
-            <div class="row">
+        <section class="ms-grid">
+            <div class="ms-row">
                 <div class="col-1-4">
                     <h4>Product sites</h4>
                     <ul class="list-of-links">
