--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="css/mscomGrid-mixed.css">
+    <link rel="stylesheet" href="css/mscom-grid-mixed.css">
     <link rel="stylesheet" href="css/demo/demo.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
