--- a/demo/Index.html
+++ b/demo/Index.html
@@ -12,9 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="css/mscom-grid-mixed.css">
-    <link rel="stylesheet" href="css/demo/demo.css">
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="sass/css/demo.css">
 </head>
 <body>
     <nav id="msdotcomoffsetmenuleft" class="msdotcomoffsetmenu left">
@@ -221,75 +219,75 @@
 
             <section class="ms-row">
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">1/4</div>
+                    <div class="colNum aqua">1/4</div>
                     <h4 class="text-center">Header four 1</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">2/4</div>
+                    <div class="colNum aqua">2/4</div>
                     <h4 class="text-center">Header four 2</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">3/4</div>
+                    <div class="colNum aqua">3/4</div>
                     <h4 class="text-center">Header four 3</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">4/4</div>
+                    <div class="colNum aqua">4/4</div>
                     <h4 class="text-center">Header four 4</h4>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-1-4 nb">
-                    <div class="colNum cyan">1/4</div>
+                    <div class="colNum aqua">1/4</div>
                     <h4 class="text-center">Header four 1</h4>
                 </div>
                 <div class="col-1-4 nb">
-                    <div class="colNum cyan">2/4</div>
+                    <div class="colNum aqua">2/4</div>
                     <h4 class="text-center">Header four 2</h4>
                 </div>
                 <div class="col-1-4 nb">
-                    <div class="colNum cyan">3/4</div>
+                    <div class="colNum aqua">3/4</div>
                     <h4 class="text-center">Header four 3</h4>
                 </div>
                 <div class="col-1-4 nb">
-                    <div class="colNum cyan">4/4</div>
+                    <div class="colNum aqua">4/4</div>
                     <h4 class="text-center">Header four 4</h4>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-2-4 ">
-                    <div class="colNum cyan">2/4</div>
+                    <div class="colNum aqua">2/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">3/4</div>
+                    <div class="colNum aqua">3/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">4/4</div>
+                    <div class="colNum aqua">4/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-3-4 ">
-                    <div class="colNum cyan">3/4</div>
+                    <div class="colNum aqua">3/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">4/4</div>
+                    <div class="colNum aqua">4/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">3/4</div>
+                    <div class="colNum aqua">3/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
                 <div class="col-3-4 ">
-                    <div class="colNum cyan">4/4</div>
+                    <div class="colNum aqua">4/4</div>
                     <h4 class="text-center">Header four</h4>
                 </div>
             </section>
@@ -1118,7 +1116,7 @@
                 </div>
             </section>
             <h1>
-                Manual column spanning (currently only supported on 24 col)
+                Manual column spanning (supported on all column counts)
             </h1>
             <section class="ms-row">
                 <div class="xs-col-3-24 m-col-7-24 xl-col-6-24">
@@ -1146,10 +1144,10 @@
             </h1>
             <section class="ms-row">
                 <div class="col-1-4">
-                    <div class="colNum cyan"></div>
+                    <div class="colNum aqua"></div>
                 </div>
                 <div class="col-1-4">
-                    <div class="cyan">
+                    <div class="aqua">
                         <section class="ms-row">
                             <div class="col-1-6">
                                 <div class="colNum orange"></div>
@@ -1173,10 +1171,10 @@
                     </div>
                 </div>
                 <div class="col-1-4">
-                    <div class="colNum cyan"></div>
+                    <div class="colNum aqua"></div>
                 </div>
                 <div class="col-1-4">
-                    <div class="cyan">
+                    <div class="aqua">
                         <section class="ms-row">
                             <div class="col-1-4">
                                 <div class="colNum green"></div>
@@ -1199,10 +1197,10 @@
                     <div class="pink">
                         <section class="ms-row">
                             <div class="col-1-4">
-                                <div class="colNum cyan"></div>
+                                <div class="colNum aqua"></div>
                             </div>
                             <div class="col-1-4">
-                                <div class="cyan">
+                                <div class="aqua">
                                     <section class="ms-row">
                                         <div class="col-1-3">
                                             <div class="colNum purple"></div>
@@ -1217,10 +1215,10 @@
                                 </div>
                             </div>
                             <div class="col-1-4">
-                                <div class="colNum cyan"></div>
+                                <div class="colNum aqua"></div>
                             </div>
                             <div class="col-1-4">
-                                <div class="cyan">
+                                <div class="aqua">
                                     <section class="ms-row">
                                         <div class="col-1-2">
                                             <div class="colNum pink"></div>
@@ -1270,10 +1268,10 @@
             </h1>
             <section class="ms-row">
                 <div class="col-1-4">
-                    <div class="colNum cyan"></div>
+                    <div class="colNum aqua"></div>
                 </div>
                 <div class="col-1-4 m-col-4-offset-2">
-                    <div class="colNum cyan"></div>
+                    <div class="colNum aqua"></div>
                 </div>
             </section>
             <section class="ms-row">
@@ -1315,7 +1313,7 @@
             </h1>
             <section class="ms-row">
                 <div class="col-1-4 centered">
-                    <div class="colNum cyan"></div>
+                    <div class="colNum aqua"></div>
                 </div>
             </section>
             <section class="ms-row">
@@ -1344,19 +1342,19 @@
             </section>
             <section class="ms-row" dir="rtl">
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">1/4</div>
+                    <div class="colNum aqua">1/4</div>
                     <h4 class="text-center">Column 1</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">2/4</div>
+                    <div class="colNum aqua">2/4</div>
                     <h4 class="text-center">Column 2</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">3/4</div>
+                    <div class="colNum aqua">3/4</div>
                     <h4 class="text-center">Column 3</h4>
                 </div>
                 <div class="col-1-4 ">
-                    <div class="colNum cyan">4/4</div>
+                    <div class="colNum aqua">4/4</div>
                     <h4 class="text-center">Column 4</h4>
                 </div>
             </section>
@@ -1593,29 +1591,13 @@
                         </tr>
                     </tbody>
                 </table>
-                <h1>Column spanning manually supported</h1>
-                <table class="demoTable">
-                    <thead>
-                        <tr>
-                            <th>Columns</th>
-                            <th>Spans</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>24</th>
-                            <td>All</td>
-                        </tr>
-                    </tbody>
-                </table>
             </section>
         </section>
     </section>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.1.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
     <script src="js/demo.js"></script>
     <script src="js/mscom-grid.js"></script>
-    <script src="js/msdotcomoffsetmenu.js"></script>
+    <script src="components/offsetmenu/src/js/msdotcomoffsetmenu.js"></script>
 </body>
 </html>
