Updating readme demo link

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -69,6 +69,7 @@
                     <ul>
                         <li>There is no vertical spacing on the grid by default. We have added vertical spacing on rows here only for demo purposes to visually space out the color of different rows</li>
                         <li>Numbering next to some headers just added to show layout changes for LTR vs. RTL</li>
+                        <li>The text on the color boxes is showing the classes that are currently present on that column</li>
                     </ul>
                 </div>
             </div>
