Documentation updates, manual colspan bug fix
Signed-off-by: Kyle Zinter <kylezinter@live.com>

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -155,7 +155,7 @@
         <section class="ms-grid fullGridDemo">
             <section class="ms-row">
                 <div class="col-1-1">
-                    <div class="colNum green">1/1</div>
+                    <div class="colNum marine">1/1</div>
                     <h1 class="text-center">
                         Header one
                     </h1>
@@ -295,55 +295,55 @@
 
             <section class="ms-row">
                 <div class="col-1-5 ">
-                    <div class="colNum purple">1/5</div>
+                    <div class="colNum lightorange">1/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">2/5</div>
+                    <div class="colNum lightorange">2/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">3/5</div>
+                    <div class="colNum lightorange">3/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">4/5</div>
+                    <div class="colNum lightorange">4/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">5/5</div>
+                    <div class="colNum lightorange">5/5</div>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-2-5 ">
-                    <div class="colNum purple">2/5</div>
+                    <div class="colNum lightorange">2/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">3/5</div>
+                    <div class="colNum lightorange">3/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">4/5</div>
+                    <div class="colNum lightorange">4/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">5/5</div>
+                    <div class="colNum lightorange">5/5</div>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-1-5 ">
-                    <div class="colNum purple">1/5</div>
+                    <div class="colNum lightorange">1/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">2/5</div>
+                    <div class="colNum lightorange">2/5</div>
                 </div>
                 <div class="col-3-5 ">
-                    <div class="colNum purple">5/5</div>
+                    <div class="colNum lightorange">5/5</div>
                 </div>
             </section>
 
             <section class="ms-row">
                 <div class="col-4-5 ">
-                    <div class="colNum purple">4/5</div>
+                    <div class="colNum lightorange">4/5</div>
                 </div>
                 <div class="col-1-5 ">
-                    <div class="colNum purple">5/5</div>
+                    <div class="colNum lightorange">5/5</div>
                 </div>
             </section>
 
