Cleaning up demo and file structure

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="sass/css/demo.css">
+    <link rel="stylesheet" href="css/demo.css">
 
     <!--[if lt IE 9]>
     <script src="/js/vendor/html5shiv.js"></script>
