--- a/demo/HPDemo.html
+++ b/demo/HPDemo.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="sass/css/demo.css">
+    <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
     <nav id="msdotcomoffsetmenuleft" class="msdotcomoffsetmenu left">
@@ -143,15 +143,15 @@
         <section class="ms-grid">
             <div class="ms-row">
                 <div class="col-1-3">
-                    <img src="img/holder1.jpg" />
+                    <img class="mini-feature-img" src="img/holder1.jpg" />
                     <span class="caption-text">Chillwave art party plaid keffiyeh bicycle rights, narwhal pour-over put a bird on it quinoa.</span>
                 </div>
                 <div class="col-1-3">
-                    <img src="img/holder1.jpg" />
+                    <img class="mini-feature-img" src="img/holder1.jpg" />
                     <span class="caption-text">Chillwave art party plaid keffiyeh bicycle rights, narwhal pour-over put a bird on it quinoa.</span>
                 </div>
                 <div class="col-1-3">
-                    <img src="img/holder1.jpg" />
+                    <img class="mini-feature-img" src="img/holder1.jpg" />
                     <span class="caption-text">Chillwave art party plaid keffiyeh bicycle rights, narwhal pour-over put a bird on it quinoa.</span>
                 </div>
             </div>
