updating demo for push/pull

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -1028,6 +1028,29 @@
 
             <section class="ms-row">
                 <div class="col-1-1">
+                    <h2>Column Ordering (push/pull)</h2>
+                </div>
+                <div class="m-col-12-24 l-col-24-push-12">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="m-col-12-24 l-col-24-pull-12">
+                    <div class="colNum green-bgc"></div>
+                </div>
+            </section>
+            <section class="ms-row">
+                <div class="m-col-12-24 l-col-24-push-12">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="m-col-8-24 l-col-24-pull-8">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="m-col-4-24 l-col-24-pull-20">
+                    <div class="colNum green-bgc"></div>
+                </div>
+            </section>
+
+            <section class="ms-row">
+                <div class="col-1-1">
                     <h2>Centered columns</h2>
                 </div>
                 <div class="col-1-4 centered">
