adding new page margins/updated demo

--- a/demo/HPDemo.html
+++ b/demo/HPDemo.html
@@ -28,7 +28,13 @@
                 <a role="button" class="offset-menu-link marginGridToggle">Margin grid</a>
             </li>
             <li>
-                <a role="button" value="Toggle fixed margin" class="offset-menu-link fixedGridToggle">Toggle fixed margin</a>
+                <a role="button" class="offset-menu-link fixedGridToggle">Toggle fixed standard column margins</a>
+            </li>
+            <li>
+                <a role="button" class="offset-menu-link fixedSmallGridToggle">Toggle fixed small column margins</a>
+            </li>
+            <li>
+                <a role="button" class="offset-menu-link fixedLargeGridToggle">Toggle fixed large column margins</a>
             </li>
             <li>
                 <a role="button" class="offset-menu-link zeroMarginToggle">Toggle zero margin</a>
