--- a/demo/Index.html
+++ b/demo/Index.html
@@ -37,7 +37,13 @@
                 <a role="button" class="offset-menu-link fullGridToggle">Toggle full grid</a>
             </li>
             <li>
-                <a role="button" value="Toggle fixed margin" class="offset-menu-link fixedGridToggle">Toggle fixed column margins</a>
+                <a role="button" class="offset-menu-link fixedGridToggle">Toggle fixed standard column margins</a>
+            </li>
+            <li>
+                <a role="button" class="offset-menu-link fixedSmallGridToggle">Toggle fixed small column margins</a>
+            </li>
+            <li>
+                <a role="button" class="offset-menu-link fixedLargeGridToggle">Toggle fixed large column margins</a>
             </li>
             <li>
                 <a role="button" class="offset-menu-link zeroMarginToggle">Toggle zero column margins</a>
