Adding hide/show content functionality and documentation

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -1074,6 +1074,55 @@
                 </div>
             </section>
 
+            <section class="ms-row">
+                <div class="col-1-1">
+                    <h2>Hiding/showing content</h2>
+                </div>
+            </section>
+            <section class="ms-row">
+            <div class="col-6-24 hide-s show-m">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24">
+                    <div class="colNum green-bgc"></div>
+                </div>
+            </section>
+                        <section class="ms-row">
+            <div class="col-6-24 hide-s show-m">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24 hide-s show-m">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24 hide-m show-s">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24 hide-m show-s">
+                    <div class="colNum green-bgc"></div>
+                </div>
+            </section>
+
+                        <section class="ms-row">
+            <div class="col-6-24 invisible-xl">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24 invisible-m">
+                    <div class="colNum green-bgc"></div>
+                </div>
+                <div class="col-6-24">
+                    <div class="colNum green-bgc"></div>
+                </div>
+            </section>
+
             <section class="ms-row" dir="rtl">
                 <div class="col-1-1">
                     <h2>RTL Support</h2>
