updating demo with a couple more complex layout examples

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -61,6 +61,9 @@
                 <a role="button"class="offset-menu-link rtlToggle">Toggle RTL</a>
             </li>
             <li>
+                <a href="Complex.html" class="offset-menu-link">More complex layout demos</a>
+            </li>
+            <li>
                 <a href="HPDemo.html" class="offset-menu-link">Homepage demo</a>
             </li>
         </ul>
@@ -168,6 +171,7 @@
                 </div>
             </section>
         </section>
+
         <section class="ms-grid fullGridDemo">
             <section class="ms-row">
                 <div class="col-1-1">
@@ -1080,7 +1084,7 @@
                 </div>
             </section>
             <section class="ms-row">
-            <div class="col-6-24 hide-s show-m">
+                <div class="col-6-24 hide-s show-m">
                     <div class="colNum green-bgc"></div>
                 </div>
                 <div class="col-6-24">
@@ -1093,8 +1097,8 @@
                     <div class="colNum green-bgc"></div>
                 </div>
             </section>
-                        <section class="ms-row">
-            <div class="col-6-24 hide-s show-m">
+            <section class="ms-row">
+                <div class="col-6-24 hide-s show-m">
                     <div class="colNum green-bgc"></div>
                 </div>
                 <div class="col-6-24 hide-s show-m">
@@ -1108,8 +1112,8 @@
                 </div>
             </section>
 
-                        <section class="ms-row">
-            <div class="col-6-24 invisible-xl">
+            <section class="ms-row">
+                <div class="col-6-24 invisible-xl">
                     <div class="colNum green-bgc"></div>
                 </div>
                 <div class="col-6-24">
