--- a/demo/Complex.html
+++ b/demo/Complex.html
@@ -169,6 +169,100 @@
                 </div>
             </section>
         </section>
+                <section class="ms-grid spartan-layout">
+            <div class="ms-row">
+                <div class="col-1-1">
+                    <div class="blue-bgc filler short"></div>
+                </div>
+            </div>
+            <div class="ms-row">
+                <div class="col-3-4">
+                    <div class="ms-row vert">
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                        <div class="col-1-3">
+                            <div class="purple-bgc filler"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-4">
+                    <div class="red-bgc filler tall"></div>
+                </div>
+            </div>
+        </section>
         <section class="ms-grid complex-layouts pinterest">
             <section class="ms-row">
                 <div class="col-1-3 uno">
