--- a/demo/Index.html
+++ b/demo/Index.html
@@ -1061,6 +1061,56 @@
 
             <section class="ms-row">
                 <div class="col-1-1">
+                    <h2>Horizontally centered columns using flexbox (.hc or .horizontally-centered class on row)</h2>
+                </div>
+            </section>
+            <section class="ms-row horizontally-centered">
+                <div class="col-1-3">
+                    <div class="colNum purple-bgc"></div>
+                </div>
+                <div class="col-1-3">
+                    <div class="colNum purple-bgc"></div>
+                </div>
+                <div class="col-1-3">
+                    <div class="colNum purple-bgc"></div>
+                </div>
+            </section>
+            <section class="ms-row hc">
+                <div class="col-1-2">
+                    <div class="colNum pink-bgc"></div>
+                </div>
+                <div class="col-1-2">
+                    <div class="colNum pink-bgc"></div>
+                </div>
+            </section>
+
+            <section class="ms-row">
+                <div class="col-1-1">
+                <h2>Vertically centered columns using flexbox (.vc or .vertically-centered class on row)</h2>
+                </div>
+            </section>
+            <section class="ms-row vertically-centered">
+                <div class="col-1-3">
+                    <div class="colNum purple-bgc md-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, reprehenderit.</div>
+                </div>
+                <div class="col-1-3">
+                    <div class="colNum purple-bgc lg-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente nisi aliquid consectetur repellat totam voluptatum, id ab doloribus, incidunt facilis!</div>
+                </div>
+                <div class="col-1-3">
+                    <div class="colNum purple-bgc"></div>
+                </div>
+            </section>
+            <section class="ms-row vc">
+                <div class="col-1-2">
+                    <div class="colNum pink-bgc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, debitis.</div>
+                </div>
+                <div class="col-1-2">
+                    <div class="colNum pink-bgc md-height"></div>
+                </div>
+            </section>
+
+            <section class="ms-row">
+                <div class="col-1-1">
                     <h2>Centered columns</h2>
                 </div>
                 <div class="col-1-4 centered">
