centered columns on the row level addition and cleaning up demo

--- a/demo/Index.html
+++ b/demo/Index.html
@@ -1086,7 +1086,7 @@
 
             <section class="ms-row">
                 <div class="col-1-1">
-                <h2>Vertically centered columns using flexbox (.vc or .vertically-centered class on row)</h2>
+                    <h2>Vertically centered columns using flexbox (.vc or .vertically-centered class on row)</h2>
                 </div>
             </section>
             <section class="ms-row vertically-centered">
@@ -1111,10 +1111,7 @@
 
             <section class="ms-row">
                 <div class="col-1-1">
-                    <h2>Centered columns</h2>
-                </div>
-                <div class="col-1-4 centered">
-                    <div class="colNum aqua-bgc"></div>
+                    <h2>Centered columns (.centered class on row or individual columns)</h2>
                 </div>
             </section>
             <section class="ms-row">
@@ -1122,9 +1119,17 @@
                     <div class="colNum purple-bgc"></div>
                 </div>
             </section>
-            <section class="ms-row">
-                <div class="col-1-2 centered">
+            <section class="ms-row centered">
+                <div class="col-1-2">
                     <div class="colNum pink-bgc"></div>
+                </div>
+            </section>
+            <section class="ms-row">
+                <div class="col-1-4 centered">
+                    <div class="colNum aqua-bgc"></div>
+                </div>
+                <div class="col-1-4 centered">
+                    <div class="colNum aqua-bgc"></div>
                 </div>
             </section>
 
